The references have been added in each layer of the project! In the 'DOMAIN' layer, models representing the database tables were added. Additionally, the NuGet package 'Microsoft.AspNetCore.Identity.EntityFrameworkCore' was included for using 'Identity' in user creation and login.

--- a/ALB.BLOG.BLO/ALB.BLOG.BLO.csproj
+++ b/ALB.BLOG.BLO/ALB.BLOG.BLO.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ALB.BLOG.DAL\ALB.BLOG.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
